--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,22 +1,6 @@
-.banner-bg {
-	/* box-sizing: border-box; */
-	background-image: url(../../images/banner.jpg);
-	/* background-size: contain; */
-	background-size: 100%;
-	background-repeat: no-repeat;
-	/* height: 850px;  */
-	width: 99%;
-	height: 150vh;
+.home {
+	margin-right: 0px;
+	margin-left: 0px;
+	padding-left: 0px;
+	padding-right: 0px;
 }
-
-.display {
-	display: flex;
-	align-items: center;
-}
-
-/* @media only screen and (max-width: 767px)
-.banner-bg {
-    height: 100%;
-    padding-top: 200px;
-    padding-bottom: 100px;
-} */
