--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,6 +11,6 @@
 }
 
 .footer-bg {
-	background-image: url(../../images/footer/footer-bg.jpg);
+	background-image: url(../../images/img/footer-bg.jpg);
 	/* background-color: coral; */
 }
